# GMod-Binary-Module-Generator

./: .gitignore  README.md  build-and-install_pipx.sh  pyproject.toml
gmod_binmod_template/: cli.py
gmod_binmod_template/template/: cookiecutter.json
gmod_binmod_template/template/hooks/: post_gen_project.py
gmod_binmod_template/template/{{cookiecutter.project_slug}}/: CMakeLists.txt  CMakePresets.json  README.md
gmod_binmod_template/template/{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
gmod_binmod_template/template/{{cookiecutter.project_slug}}/cmake/: Toolchain-Linux-GCC.cmake  Toolchain-Windows-MSVC.cmake
gmod_binmod_template/template/{{cookiecutter.project_slug}}/include/{{cookiecutter.module_slug}}/: module.hpp
gmod_binmod_template/template/{{cookiecutter.project_slug}}/src/: main.cpp
